fixed blank extra resources and spacing for icons

--- a/src/styles/sassets/schedule.scss
+++ b/src/styles/sassets/schedule.scss
@@ -6,6 +6,10 @@
     margin-bottom: 20px;
 }
 
+.icon-link, .content-modal-button {
+    margin-left: 10px;
+}
+
 .content-item {
     display: flex;
     flex-direction: row;
@@ -43,7 +47,7 @@
         min-width: 20%;
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: flex-end;
     }
 
     @include smartphone-portrait {
